@@ -1,0 +1,9 @@
+top_builddir=../../../..
+include $(top_builddir)/Makefile.config
+
+SUBDIRS = 
+TEST_PROGS = parse-meta-refresh-test
+TESTDEPS += \
+ $(top_builddir)/src/document/html/parse-meta-refresh.o
+
+include $(top_srcdir)/Makefile.lib
