@@ -1,0 +1,3 @@
+#! /bin/sh -e
+
+./parse-meta-refresh-test
