@@ -83,6 +83,8 @@ Miscellaneous:
   <video> and <audio>.
 * enhancement: Add move-half-page-up and move-half-page-down actions.
 * enhancement: Add option to change overlap for vertical scrolling.
+* enhancement: HTML meta refresh allows semicolons in URLs, and the
+  syntax is more like in Firefox.
 * link against lua51 not lua50
 * SpiderMonkey must be 1.8.5 or later.  Find it with pkg-config.
 * using iconv for some multibyte charsets. It works if the terminal codepage
